--- a/docker/Dockerfile.ipex
+++ b/docker/Dockerfile.ipex
@@ -115,6 +115,7 @@ RUN git clone -b ${IPEX_BRANCH} https://github.com/intel/intel-extension-for-pyt
 ARG BENCH_COMMIT=main
 WORKDIR /workspace/pytorch
 RUN git checkout ${BENCH_COMMIT} benchmarks && \
+    pip install cpuid && \
     python -c "import torch, intel_extension_for_pytorch, torchvision, torchtext"
 
 # Clean for final image
