--- a/docker/Dockerfile.gpu
+++ b/docker/Dockerfile.gpu
@@ -18,6 +18,7 @@ RUN apt-get update && \
         libxext6 \
         numactl \
         pybind11-dev \
+        wget \
         vim \
     && rm -rf /var/lib/apt/lists/*
 RUN /usr/sbin/update-ccache-symlinks
