--- a/docker/Dockerfile.gpu
+++ b/docker/Dockerfile.gpu
@@ -95,11 +95,11 @@ RUN git clone -b ${TORCH_VISION_BRANCH} https://github.com/pytorch/vision.git &&
     git clone -b ${TORCH_DATA_BRANCH} https://github.com/pytorch/data.git && \
     cd data && git checkout ${TORCH_DATA_COMMIT} && \
     python setup.py bdist_wheel && \
-    pip install dist/*.whl && cd .. && \
+    pip install --no-deps dist/*.whl && cd .. && \
     git clone -b ${TORCH_TEXT_BRANCH} https://github.com/pytorch/text.git && \
     cd text && git checkout ${TORCH_TEXT_COMMIT} && git submodule sync && git submodule update --init --recursive && \
     python setup.py bdist_wheel && \
-    pip install dist/*.whl && cd .. && \
+    pip install --no-deps dist/*.whl && cd .. && \
     git clone -b ${TORCH_AUDIO_BRANCH} https://github.com/pytorch/audio.git && \
     cd audio && git checkout ${TORCH_AUDIO_COMMIT} && git submodule sync && git submodule update --init --recursive && \
     # Workaround for https://github.com/pytorch/audio/issues/2784
