--- a/docker/Dockerfile.ipex
+++ b/docker/Dockerfile.ipex
@@ -55,6 +55,7 @@ RUN curl -fsSL -v -o ~/miniconda.sh -O  https://repo.anaconda.com/miniconda/Mini
         Pillow \
         pkg-config \
         pybind11 \
+        pycocotools \
         pyyaml \
         setuptools \
         jemalloc \
@@ -106,6 +107,8 @@ ARG TORCH_BENCH_COMMIT=${TORCH_BENCH_BRANCH}
 RUN git clone -b ${TORCH_BENCH_BRANCH} https://github.com/pytorch/benchmark.git && \
     cd benchmark && git checkout ${TORCH_BENCH_COMMIT} && pip install --no-deps -r requirements.txt && \
     pip install --no-cache Jinja2==3.1.2 markupsafe==2.0.1 && \
+    # Workaround for https://github.com/pytorch/benchmark/issues/1772
+    sed -i '/pyworld/d' torchbenchmark/models/tts_angular/requirements.txt && \      
     python install.py && cd .. && \
     # Need update numpy version to avoid some models crash
     pip install --upgrade numpy
