fix torchbench deps

--- a/docker/Dockerfile.ipex
+++ b/docker/Dockerfile.ipex
@@ -60,6 +60,7 @@ RUN curl -fsSL -v -o ~/miniconda.sh -O  https://repo.anaconda.com/miniconda/Mini
         setuptools \
         jemalloc \
         openssl \
+        urllib3==1.26.16 \          
         weasyprint && \
     /opt/conda/bin/conda clean -ya && \
     # Fix GLIBCXX version issue
@@ -109,6 +110,7 @@ RUN git clone -b ${TORCH_BENCH_BRANCH} https://github.com/pytorch/benchmark.git 
     pip install --no-cache Jinja2==3.1.2 markupsafe==2.0.1 && \
     # Workaround for https://github.com/pytorch/benchmark/issues/1772
     sed -i '/pyworld/d' torchbenchmark/models/tts_angular/requirements.txt && \      
+    sed -i '/torchrec-nightly/d' torchbenchmark/models/dlrm/requirements.txt && \    
     python install.py && cd .. && \
     # Need update numpy version to avoid some models crash
     pip install --upgrade numpy
