--- a/docker/Dockerfile.gpu
+++ b/docker/Dockerfile.gpu
@@ -64,6 +64,7 @@ RUN curl -fsSL -v -o ~/miniconda.sh -O  https://repo.anaconda.com/miniconda/Mini
         setuptools \
         jemalloc \
         openssl \
+        urllib3==1.26.16 \          
         weasyprint && \
     /opt/conda/bin/conda clean -ya
 
@@ -114,7 +115,8 @@ RUN git clone -b ${TORCH_BENCH_BRANCH} https://github.com/pytorch/benchmark.git 
     cd benchmark && git checkout ${TORCH_BENCH_COMMIT} && pip install --no-deps -r requirements.txt && \
     pip install --no-cache Jinja2==3.1.2 markupsafe==2.0.1 && \
     # Workaround for https://github.com/pytorch/benchmark/issues/1772
-    sed -i '/pyworld/d' torchbenchmark/models/tts_angular/requirements.txt && \      
+    sed -i '/pyworld/d' torchbenchmark/models/tts_angular/requirements.txt && \   
+    sed -i '/torchrec-nightly/d' torchbenchmark/models/dlrm/requirements.txt && \       
     python install.py --continue_on_fail && \
     # Need update numpy version to avoid some models crash
     pip install --upgrade numpy
