fix torchbench deps

--- a/docker/Dockerfile.ipex
+++ b/docker/Dockerfile.ipex
@@ -58,6 +58,7 @@ RUN curl -fsSL -v -o ~/miniconda.sh -O  https://repo.anaconda.com/miniconda/Mini
         setuptools \
         jemalloc \
         openssl \
+        urllib3==1.26.16 \  
         weasyprint && \
     /opt/conda/bin/conda clean -ya && \
     # Fix GLIBCXX version issue
@@ -95,7 +96,8 @@ RUN git clone -b ${TORCH_VISION_BRANCH} https://github.com/pytorch/vision.git &&
     git clone -b ${TORCH_AUDIO_BRANCH} https://github.com/pytorch/audio.git && \
     cd audio && git checkout ${TORCH_AUDIO_COMMIT} && git submodule sync && git submodule update --init --recursive && \
     # Workaround for https://github.com/pytorch/audio/issues/2784
-    sed -i "3 i link_directories(/opt/conda/lib)" CMakeLists.txt && \
+    sed -i '/pyworld/d' torchbenchmark/models/tts_angular/requirements.txt && \
+    sed -i '/torchrec-nightly/d' torchbenchmark/models/dlrm/requirements.txt && \
     python setup.py bdist_wheel && \
     pip install dist/*.whl && cd ..
 ARG TORCH_BENCH_BRANCH=main
