--- a/docker/Dockerfile.gpu
+++ b/docker/Dockerfile.gpu
@@ -79,7 +79,7 @@ RUN cd pytorch && TORCH_CUDA_ARCH_LIST="5.2 6.0 6.1 7.0+PTX 8.0" TORCH_NVCC_FLAG
 ARG TRITON_BRANCH=main
 ARG TRITON_COMMIT=${TRITON_BRANCH}
 RUN git clone -b ${TRITON_BRANCH} https://github.com/openai/triton.git && \
-    cd triton/python && python setup.py bdist_wheel && pip install dist/*.whl
+    cd triton && git checkout ${TRITON_COMMIT} && cd python && python setup.py bdist_wheel && pip install dist/*.whl
 ARG TORCH_VISION_BRANCH=nightly
 ARG TORCH_VISION_COMMIT=${TORCH_VISION_BRANCH}
 ARG TORCH_DATA_BRANCH=nightly
