--- a/docker/Dockerfile.ipex
+++ b/docker/Dockerfile.ipex
@@ -90,7 +90,7 @@ RUN git clone -b ${TORCH_BENCH_BRANCH} https://github.com/pytorch/benchmark.git 
 ARG BENCH_COMMIT=main
 WORKDIR /workspace/pytorch
 RUN git checkout ${BENCH_COMMIT} benchmarks && \
-    pip install cpuid && \
+    pip install cpuid pyre_extensions torchrec && \
     pip install z3-solver && \
     python -c "import torch, torchvision, torchtext"
 
