--- a/docker/Dockerfile.bm.arm
+++ b/docker/Dockerfile.bm.arm
@@ -68,7 +68,7 @@ ARG TORCH_BENCH_COMMIT=${TORCH_BENCH_BRANCH}
 WORKDIR /workspace
 RUN git clone -b ${TORCH_BENCH_BRANCH} https://github.com/pytorch/benchmark.git && \
     cd benchmark && git checkout ${TORCH_BENCH_COMMIT} && pip install --no-deps -r requirements.txt && \
-    pip install --no-cache Jinja2==3.1.2 markupsafe==2.0.1 sympy && \
+    pip install --no-cache Jinja2==3.1.2 markupsafe==2.0.1 beartype==0.15.0 sympy && \
     python install.py --continue_on_fail && \
     # Need update numpy version to avoid some models crash
     pip install --upgrade numpy
