--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -108,7 +108,7 @@ RUN git clone -b ${TORCH_BENCH_BRANCH} https://github.com/pytorch/benchmark.git 
     pip install --no-cache Jinja2==3.1.2 markupsafe==2.0.1 beartype==0.15.0 && \
     # Workaround for https://github.com/pytorch/benchmark/issues/1772
     sed -i '/pyworld/d' torchbenchmark/models/tts_angular/requirements.txt && \ 
-    python install.py && \
+    python install.py --continue_on_fail && \
     # Need update numpy version to avoid some models crash
     pip install --upgrade numpy
 ARG BENCH_COMMIT=${PT_COMMIT}
