fix urllib3 issue

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -60,7 +60,6 @@ RUN curl -fsSL -v -o ~/miniconda.sh -O  https://repo.anaconda.com/miniconda/Mini
         setuptools \
         jemalloc \
         openssl \
-        urllib3==1.26.16 \
         weasyprint && \
     /opt/conda/bin/conda clean -ya
 
@@ -105,10 +104,11 @@ ARG TORCH_BENCH_BRANCH=main
 ARG TORCH_BENCH_COMMIT=${TORCH_BENCH_BRANCH} 
 RUN git clone -b ${TORCH_BENCH_BRANCH} https://github.com/pytorch/benchmark.git && \
     cd benchmark && git checkout ${TORCH_BENCH_COMMIT} && pip install --no-deps -r requirements.txt && \
-    pip install --no-cache Jinja2==3.1.2 markupsafe==2.0.1 beartype==0.15.0 && \
+    pip uninstall botocore -y && \
+    pip install --no-cache Jinja2==3.1.2 markupsafe==2.0.1 beartype==0.15.0 urllib3==1.26.16 && \
     # Workaround for https://github.com/pytorch/benchmark/issues/1772
     sed -i '/pyworld/d' torchbenchmark/models/tts_angular/requirements.txt && \ 
-    python install.py --continue_on_fail && \
+    python install.py && \
     # Need update numpy version to avoid some models crash
     pip install --upgrade numpy
 ARG BENCH_COMMIT=${PT_COMMIT}
