--- a/docker/Dockerfile.gpu
+++ b/docker/Dockerfile.gpu
@@ -78,9 +78,9 @@ RUN git clone -b ${PT_BRANCH} ${PT_REPO} && \
     cd pytorch && git checkout ${PT_COMMIT} && git submodule sync && git submodule update --init --recursive 
 RUN cd pytorch && pip install z3-solver && TORCH_CUDA_ARCH_LIST="5.2 6.0 6.1 7.0+PTX 8.0" TORCH_NVCC_FLAGS="-Xfatbin -compress-all" python setup.py develop
 ARG TRITON_BRANCH=main
-ARG TRITON_COMMIT=${TRITON_BRANCH}
+ARG TRITON_COMMIT=default
 RUN git clone -b ${TRITON_BRANCH} https://github.com/openai/triton.git && \
-    cd triton && git checkout ${TRITON_COMMIT} && cd python && python setup.py bdist_wheel && pip install dist/*.whl
+    cd triton && if [ "${TRITON_COMMIT}" = "default" ]; then git checkout `cat /workspace/pytorch/.ci/docker/ci_commit_pins/triton.txt`; else git checkout ${TRITON_COMMIT}; fi && cd python && python setup.py bdist_wheel && pip install dist/*.whl
 ARG TORCH_VISION_BRANCH=main
 ARG TORCH_VISION_COMMIT=default
 ARG TORCH_DATA_BRANCH=main
