--- a/docker/Dockerfile.bm.arm
+++ b/docker/Dockerfile.bm.arm
@@ -63,12 +63,11 @@ RUN curl -fsSL -v -o ~/miniconda.sh -O  https://repo.anaconda.com/miniconda/Mini
 FROM dev-base AS image
 COPY --from=conda /opt/conda /opt/conda
 RUN pip install torch==2.0.1 torchvision torchaudio torchdata torchtext --no-deps --index-url https://download.pytorch.org/whl/cpu
-ARG TORCH_BENCH_BRANCH=main
-ARG TORCH_BENCH_COMMIT=${TORCH_BENCH_BRANCH}
+ARG TORCH_BENCH_COMMIT="main"
 ARG HF_HUB_TOKEN=hf_xxx
 ENV HUGGING_FACE_HUB_TOKEN ${HF_HUB_TOKEN}
 WORKDIR /workspace
-RUN git clone -b ${TORCH_BENCH_BRANCH} https://github.com/pytorch/benchmark.git && \
+RUN git clone https://github.com/pytorch/benchmark.git && \
     cd benchmark && git checkout ${TORCH_BENCH_COMMIT} && pip install --no-deps -r requirements.txt && \
     pip install --no-cache Jinja2==3.1.2 markupsafe==2.0.1 beartype==0.15.0 sympy && \
     python install.py --continue_on_fail && \
