--- a/docker/Dockerfile.ipex
+++ b/docker/Dockerfile.ipex
@@ -66,52 +66,45 @@ RUN curl -fsSL -v -o ~/miniconda.sh -O  https://repo.anaconda.com/miniconda/Mini
 
 FROM dev-base AS build
 ARG PT_REPO=https://github.com/blzheng/pytorch
-ARG PT_BRANCH=xiaobing/Nov_11
-ARG PT_COMMIT=${PT_BRANCH}
+ARG PT_COMMIT="xiaobing/Nov_11"
 COPY --from=conda /opt/conda /opt/conda
 WORKDIR /workspace
-RUN git clone -b ${PT_BRANCH} ${PT_REPO} && \
+RUN git clone ${PT_REPO} && \
     cd pytorch && git checkout ${PT_COMMIT} && git submodule sync && git submodule update --init --recursive && \
     pip install z3-solver && python setup.py develop && cd .. 
-ARG TORCH_VISION_BRANCH=main
 ARG TORCH_VISION_COMMIT=default
-ARG TORCH_DATA_BRANCH=main
 ARG TORCH_DATA_COMMIT=default
-ARG TORCH_TEXT_BRANCH=main
 ARG TORCH_TEXT_COMMIT=default
-ARG TORCH_AUDIO_BRANCH=main
 ARG TORCH_AUDIO_COMMIT=default
-RUN git clone -b ${TORCH_VISION_BRANCH} https://github.com/pytorch/vision.git && \
+RUN git clone https://github.com/pytorch/vision.git && \
     cd vision && if [ "${TORCH_VISION_COMMIT}" = "default" ]; then git checkout `cat /workspace/pytorch/.github/ci_commit_pins/vision.txt`; else git checkout ${TORCH_VISION_COMMIT}; fi && \
     python setup.py bdist_wheel && \
     pip install dist/*.whl && cd .. && \
-    git clone -b ${TORCH_DATA_BRANCH} https://github.com/pytorch/data.git && \
+    git clone https://github.com/pytorch/data.git && \
     cd data && if [ "${TORCH_DATA_COMMIT}" = "default" ]; then git checkout `cat /workspace/pytorch/.github/ci_commit_pins/data.txt`; else git checkout ${TORCH_DATA_COMMIT}; fi && \
     python setup.py bdist_wheel && \
     pip install dist/*.whl && cd .. && \
-    git clone -b ${TORCH_TEXT_BRANCH} https://github.com/pytorch/text.git && \
+    git clone https://github.com/pytorch/text.git && \
     cd text && if [ "${TORCH_TEXT_COMMIT}" = "default" ]; then git checkout `cat /workspace/pytorch/.github/ci_commit_pins/text.txt`; else git checkout ${TORCH_TEXT_COMMIT}; fi && git submodule sync && git submodule update --init --recursive && \
     python setup.py bdist_wheel && \
     pip install dist/*.whl && cd .. && \
-    git clone -b ${TORCH_AUDIO_BRANCH} https://github.com/pytorch/audio.git && \
+    git clone https://github.com/pytorch/audio.git && \
     cd audio && if [ "${TORCH_AUDIO_COMMIT}" = "default" ]; then git checkout `cat /workspace/pytorch/.github/ci_commit_pins/audio.txt`; else git checkout ${TORCH_AUDIO_COMMIT}; fi && git submodule sync && git submodule update --init --recursive && \
     # Workaround for https://github.com/pytorch/audio/issues/2784
     sed -i "3 i link_directories(/opt/conda/lib)" CMakeLists.txt && \
     python setup.py bdist_wheel && \
     pip install dist/*.whl && cd ..
-ARG TORCH_BENCH_BRANCH=main
 ARG TORCH_BENCH_COMMIT=default
 ARG HF_HUB_TOKEN=hf_xxx
 ENV HUGGING_FACE_HUB_TOKEN ${HF_HUB_TOKEN}
-RUN git clone -b ${TORCH_BENCH_BRANCH} https://github.com/pytorch/benchmark.git && \
+RUN git clone https://github.com/pytorch/benchmark.git && \
     cd benchmark && if [ "${TORCH_BENCH_COMMIT}" = "default" ]; then git checkout `cat /workspace/pytorch/.github/ci_commit_pins/torchbench.txt`; else git checkout ${TORCH_BENCH_COMMIT}; fi && pip install --no-deps -r requirements.txt && \
     pip install --no-cache Jinja2==3.1.2 markupsafe==2.0.1 && \
     python install.py --continue_on_fail && cd .. && \
     # Need update numpy version to avoid some models crash
     pip install --upgrade numpy
-ARG IPEX_BRANCH=dynamo_ipex113
-ARG IPEX_COMMIT=${IPEX_BRANCH}
-RUN git clone -b ${IPEX_BRANCH} https://github.com/intel/intel-extension-for-pytorch.git ipex && \
+ARG IPEX_COMMIT="dynamo_ipex113"
+RUN git clone https://github.com/intel/intel-extension-for-pytorch.git ipex && \
     cd ipex && git checkout ${IPEX_COMMIT} && git submodule sync && git submodule update --init --recursive && \
     python setup.py install
 ARG BENCH_COMMIT=${PT_COMMIT}
